--- a/main/Sample/Northwind.Web/Views/Home/Index.cshtml
+++ b/main/Sample/Northwind.Web/Views/Home/Index.cshtml
@@ -1,61 +1,5 @@
-﻿<!DOCTYPE html>
-<html lang="en" ng-app="northwindApp">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    
-    <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/Site.css" rel="stylesheet" />
-
-    @Scripts.Render("~/bundles/modernizr")
-    
-    <link href="~/Content/kendo/2014.1.318/kendo.common.min.css" rel="stylesheet" />
-    <link href="~/Content/kendo/2014.1.318/kendo.bootstrap.min.css" rel="stylesheet" />
-
-</head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="#/home" class="navbar-brand">http://blog.longle.net</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="#/home">Home</a></li>
-                    <li><a href="#/customer">Customer</a></li>
-                    <li><a href="#/help">API</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        <ng-view></ng-view>
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
-
-    <script src="~/Scripts/jquery-2.1.0.min.js"></script>
-    <script src="~/Scripts/angular.min.js"></script>
-    <script src="~/Scripts/angular-route.min.js"></script>
-    <script src="~/Scripts/angular-animate.min.js"></script>
-    <script src="~/Scripts/kendo/2014.1.318/kendo.web.min.js"></script>
-    <script src="~/Scripts/angular-kendo.min.js"></script>
-    
-    <script src="~/Scripts/app/app.js"></script>
-    <script src="~/Scripts/app/services/customerModel.js"></script>
-    <script src="~/Scripts/app/services/customerDataSource.js"></script>
-    <script src="~/Scripts/app/controllers/homeController.js"></script>
-    <script src="~/Scripts/app/controllers/customerController.js"></script>
-    <script src="~/Scripts/app/controllers/customerEditController.js"></script>
-    
-    <script src="~/Scripts/bootstrap.min.js"></script>
-</body>
-</html>
+﻿@{
+    ViewBag.Title = "SPA";
+    ViewBag.Description = "SPA App";
+}
+<div ng-view></div>
